# SRF

./: README.md  Scenario Analysis.md  copydb.bat  dbparams.yaml  install_libraries.bat  machine_settings.py  restoredb.bat  startSRF.bat
.github/workflows/: test_supply.yml
Demand/: README.md  install_requirements.R
Demand/Alpaca/: .gitignore  README.md  setup.py
Demand/Alpaca/examples/: callAlpaca_arcPy_new.py  housing_affordability.py  muland_prep_Fresno.py  scag_test_2012.py
Demand/Alpaca/muLand/: .gitignore  builder.sh  readme.md
Demand/Alpaca/muLand/doc/: micro-land.doxyfile
Demand/Alpaca/muLand/etc/: user-config-64.patch
Demand/Alpaca/muLand/local/nix/include/m2l/io/: datafile.hpp  datafile_exception.hpp  datafile_reader.hpp  datafile_writer.hpp
Demand/Alpaca/muLand/local/nix/include/m2l/math/: algorithm.hpp  functions.hpp
Demand/Alpaca/muLand/local/nix/include/m2l/matrix/: matrix_backend.hpp
Demand/Alpaca/muLand/local/nix/include/m2l/solver/: solver.hpp
Demand/Alpaca/muLand/src/: CMakeLists.txt  README.txt  license_m2l.txt  src.kdev4
Demand/Alpaca/muLand/src/.kdev4/: src.kdev4
Demand/Alpaca/muLand/src/cmake_extras/: toolchain-mingw-64.cmake
Demand/Alpaca/muLand/src/data/: CMakeLists.txt  muland_data.cpp  muland_data.hpp
Demand/Alpaca/muLand/src/io/: .directory  CMakeLists.txt  txt_datafile_reader.cpp  txt_datafile_reader.hpp
Demand/Alpaca/muLand/src/main/: CMakeLists.txt  mu_land.cpp
Demand/Alpaca/muLand/src/math/: CMakeLists.txt  muland_algorithm.cpp  muland_algorithm.hpp  muland_functions.cpp  muland_functions.hpp  muland_tools.cpp  muland_tools.hpp
Demand/Alpaca/muLand/src/solver/: CMakeLists.txt  README  configurator.cpp  configurator.hpp  solver.cpp
Demand/Alpaca/muLand/test/demo-city/: .directory
Demand/Alpaca/muLand/test/demo-city/input/: agents.csv  agents_zones.csv  bids_adjustments.csv  bids_functions.csv  demand.csv  demand_exogenous_cutoff.csv  real_estates_zones.csv  rent_adjustments.csv  rent_functions.csv  subsidies.csv  supply.csv  zones.csv
Demand/Alpaca/mulandweb/: __init__.py  __main__.py  config.py  db.py  handlers.py  muland.py  mulanddb.py  xmlparser.py
Demand/R/: aa2demand.R  defaultFunctions.R  evalDemand.R  helperFunctions.R  runMuLand.R
Demand/python/: rents2supply.py
PECAS/: README.rst
PECAS/S21u_m_aa/: aa_routines.py  aa_settings.py  dump2csv.py  project_code.py  run_aa_allyears.py  sqlutil.py
PECAS/S21u_m_aa/AllYears/Inputs/: TechnologyOptionsI_header.csv
PECAS/S21u_m_aa/AllYears/Working/PopulationSynthesis/: Synth.properties
PECAS/S27_aa/: aa_routines.py  aa_settings.py  dump2csv.py  errorutil.py  project_code.py  run_aa.py  run_aa_allyears.py  runpecas.py  scriptutil.py  skim_conversion_for_sem_goods.sql  skim_conversion_for_sem_sov.sql  skim_conversion_for_sem_transit.sql  skims_to_sem.py
PECAS/S27_aa/AllYears/Working/PopulationSynthesis/: samples_sandag.csv
PECAS/S28_aa/: aa_routines.py  aa_settings.py  csvutil.py  dump2csv.py  project_code.py  run_aa.py  run_aa_allyears.py  run_tests.py  skim_conversion_for_sem_goods.sql  skim_conversion_for_sem_sov.sql  skim_conversion_for_sem_transit.sql  skims_to_sem.py  test_supply.py  transit_access.sql
PECAS/S28_aa/AllYears/Code/: constant_update.sql  log4j.xml
PECAS/S28_aa/AllYears/Inputs/: aa.properties
PECAS/S28_aa/AllYears/Outputs/: development_events.xml
PECAS/S28_aa/AllYears/Working/PopulationSynthesis/: PopSynTargets.csv
PostProcessor/: mergeOutputs.py  postProcess_outputs.bat
Supply/: .gitignore  Pipfile  README.md  SR13_Regional_Totals_interpolated.csv  labels.yaml  main.py  meet_demand.py  parameters-backup.yaml  parameters.yaml  parameters_template.yaml  redm_main.py  rents2supply.py  requirements.txt  scheduled_development.py  test.py  test_parameters.yaml  test_with_coverage.sh  updatesupply.py
Supply/.github/workflows/: pythonapp.yml
Supply/REDM/: .gitignore  README.md  parameters.yaml  redm_main.py  test_parameters.yaml
Supply/REDM/data/: README.md
Supply/REDM/data/output/: parameters.txt
Supply/REDM/docs/: DRAFT REDM.docx  REDM-Flow.drawio
Supply/REDM/modeling/: data_augmentation.py  develop.py  developer.py  filter.py  filters.py
Supply/REDM/modeling/test/: test_develop.py  test_developer.py  test_filter.py  test_filters.py
Supply/REDM/test/: test_main.py
Supply/REDM/test_data/: contrived_MGRA.csv  contrived_info.txt  random_MGRA.csv
Supply/REDM/utils/: analysis.py  config.py  constants.py  converter.py  data_prep.py  extract_test_data.py  interface.py
Supply/REDM/utils/test/: test_analysis.py
Supply/modeling/: candidates.py  data_augmentation.py  dataframe_updates.py  demand_manager.py  develop.py  filters.py
Supply/modeling/test/: test_candidates.py  test_dataframe_updates.py  test_develop.py  test_filters.py
Supply/test/: test_main.py  test_meet_demand.py  test_scheduled_development.py
Supply/test_data/: contrived_MGRA.csv  frame_nans.csv  random_MGRA.csv
Supply/test_data/filtering/: expected_profit_multipliers.csv  mock_single_family_candidates.csv
Supply/utils/: aa_export.py  aa_floorspace_update.py  aa_luz_export.py  access_labels.py  analysis.py  config.py  constants.py  data_prep.py  extract_test_data.py  interface.py  pandas_shortcuts.py  parameter_access.py  preProcessor.py  profitability_adjust.py
Supply/utils/test/: test_aa_floorspace_update.py  test_interface.py  test_pandas_shortcuts.py
Validation/: aa_checks.r  general_checks.r  lm_demand_emperror_n.r  supply_checks.r
